# cubecl-hip

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
crates/build-script/: Cargo.toml
crates/build-script/src/: lib.rs
crates/cubecl-hip-sys/: Cargo.toml  build.rs
crates/cubecl-hip-sys/src/: build_script.rs  hipconfig.rs  lib.rs
crates/cubecl-hip-sys/src/bindings/: bindings_42134.rs  bindings_43483.rs  bindings_622.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: bindgen.rs  mod.rs  test.rs
