[package]
authors = ["Tracel Technologies Inc."]
categories = ["external-ffi-bindings"]
description = "Rust bindings for AMD ROCm HIP runtime libraries used by CubeCL."
keywords = ["cubecl", "ROCm", "HIP", "API", "bindings"]
edition.workspace = true
license.workspace = true
name = "cubecl-hip-sys"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl-hip/tree/main/crates/cubecl-hip-sys"
version.workspace = true
rust-version = "1.81"

[features]
default = ["rocm__6_3_1"]

# ROCm versions
rocm__6_2_2 = [ "hip_41134" ]
rocm__6_2_4 = [ "hip_41134" ]
rocm__6_3_0 = [ "hip_42131" ]
rocm__6_3_1 = [ "hip_42133" ]

# HIP versions
hip_41134 = []
hip_42131 = []
hip_42133 = []

[dependencies]
libc = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
