[package]
authors = ["Tracel Technologies Inc."]
categories = ["external-ffi-bindings"]
description = "Rust bindings for AMD ROCm HIP runtime libraries used by CubeCL."
keywords = ["cubecl", "ROCm", "HIP", "API", "bindings"]
edition.workspace = true
license.workspace = true
name = "cubecl-hip-sys"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl-hip/tree/main/crates/cubecl-hip-sys"
version.workspace = true
rust-version = "1.81"

[features]
default = []

# ROCm versions
rocm__6_2_2 = ["hip_41134"]
rocm__6_2_4 = ["hip_41134"]
rocm__6_3_0 = ["hip_42131"]
rocm__6_3_1 = ["hip_42133"]
rocm__6_3_2 = ["hip_42134"]
rocm__6_3_3 = ["hip_42134"]
rocm__6_3_4 = ["hip_42134"]

# HIP versions
hip_41134 = []
hip_42131 = []
hip_42133 = []
hip_42134 = []

[dependencies]
libc = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
